OrderService and OrderController method updated - Completed test